--- a/markup/home/lesson 3/css/style.css
+++ b/markup/home/lesson 3/css/style.css
@@ -12,7 +12,7 @@ a {
 }
 
 .container {
-	box-shadow: 2px 4px 5px 6px rgb(218, 218, 218);
+	box-shadow: 1px 1px 1px 1px rgb(217,217,217) ;
 	border: 1px solid rgb(218, 218, 218);
 	width: 1060px;
 	margin: 0 auto;
@@ -23,11 +23,11 @@ a {
 	width: 145px;
 	height: 40px;
 	margin-bottom: 30px;
-	margin-left: 33px;
+	margin-left: 45px;
 
 }
 .headNav{
-	margin-left: 33px;
+	margin: 0 auto;
 	width: 966px;
 	height: 40px;
 	background: -webkit-linear-gradient(90deg, #444343 0%, #5e5e5e 100%);
@@ -38,48 +38,57 @@ a {
 }
 .aHead {
 	color: #ffffff;
-}
-.headMenu {
-	margin-left: 23px;
+	height: 40px;
+	width: 100px;
+
 }
 .liInline {
+	height: 40px;
+	width: 100px;
 	font-family: OpenSans;
 	color: #ffffff;
 	font-size: 14.67px; /* Approximation due to font substitution */
 	font-weight: 400;
-	line-height: 29.333px; /* Approximation due to font substitution */
+	line-height: 40px; /* Approximation due to font substitution */
 	text-align: justify;
 	text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
 	text-decoration: none;
-	display: inline;
-	margin-right: 47px;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+	
 }
-.aHead:hover {
+.liInline:hover {
 	background: -webkit-linear-gradient(90deg, #2e2e2e 0%, #4a4a4a 100%);
 	background: -moz-linear-gradient(90deg, #2e2e2e 0%, #4a4a4a 100%);
 	background: -o-linear-gradient(90deg, #2e2e2e 0%, #4a4a4a 100%);
 	background: -ms-linear-gradient(90deg, #2e2e2e 0%, #4a4a4a 100%);
 	background: linear-gradient(0deg, #2e2e2e 0%, #4a4a4a 100%);
-	padding-left: 15px;
-	padding-top: 6px;
-	padding-bottom: 16px;
-	padding-right: 18px;
+	height: 40px;
+	width: 100px;
 	border-left: 1px solid rgb(101, 99, 99);
 	border-right: 1px solid rgb(101, 99, 99);
+	
 }
 li {
 	list-style-type: none;
 }
+.maine {
+	padding-top: 40px;
+	width: 970px;
+	height: 600px;
+	margin: 0 auto;
+	padding-bottom: 56px;
+}
 aside {
-	margin-left: 33px;
-	margin-top: 29px;
 	border-style: solid;
 	border-width: 1px;
 	border-color:  #c8c8c8;
 	box-sizing: border-box;
 	background-color:  #ffffff;
-	width: 181px;
-	height: 176px;
+	width: 240px;
+	height: 240px;
+	float:left;
 	
 }
 .aAside {
@@ -92,7 +101,7 @@ aside {
 	font-weight: 400;
 	line-height: 37.333px;/* Approximation due to font substitution */
 	text-align: left;
-	height: 29px;
+	height: 40px;
 	border-style: solid;
 	border-width: 1px;
 	border-color:  #c8c8c8;
@@ -101,16 +110,12 @@ aside {
 	padding-left: 18px;
 }
 .aAside:hover { 
-   color:  #2c2b2b;
+   color: #2c2b2b;
 	padding-left: 32px;
 }
 article {
-	margin-top: 29px;
-	position: relative;
-	bottom: 205px;
-	left: 283px;
-	width: 508px;
-	height: 430px;
+	width: 678px;
+	float: right;
 }
 .acticalPar {
 	font-family: OpenSans;
@@ -121,7 +126,7 @@ article {
 	text-align: left;
 	width: 625px;
 	height: 141px;
-	margin-left: 60px;
+	margin-left: 24px;
 	margin-top: 29px;
 }
 .imgArticle {
@@ -130,10 +135,10 @@ article {
 	border-color:  #c8c8c8;
 	box-sizing: border-box;
 	width: 678px;
-	height: 400px;
-	margin-left: 35px;
+	
 }
 footer {
+	clear: both;
 	margin-left: 33px;
 	height: 40px;
 	background-color:  #e1e1e1;
