--- a/markup/home/lesson 3/css/style.css
+++ b/markup/home/lesson 3/css/style.css
@@ -2,20 +2,28 @@
 	margin: 0;
 	padding:0;
 }
+@font-face {
+	font-family: OpenSans;
+    src: url(../fonts/OpenSans-Regular.ttf);
+}
 body {
 	width: 100%;
-	background-image: url(../img/bg.png) cover;
+	background-image: url(../img/bg.png);
+	background-size: cover;
 }
 a {
 	text-decoration: none;
-
 }
-
+header {
+	padding-top: 50px;
+}
 .container {
-	box-shadow: 1px 1px 1px 1px rgb(217,217,217) ;
-	border: 1px solid rgb(218, 218, 218);
 	width: 1060px;
 	margin: 0 auto;
+	padding-bottom: 50px;
+	-webkit-box-shadow: 0 0 5px 0 rgba(0,0,0,.3);
+    -moz-box-shadow: 0 0 5px 0 rgba(0,0,0,.3);
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.3);
 
 }
 .headImg {
@@ -38,16 +46,15 @@ a {
 }
 .aHead {
 	color: #ffffff;
-	height: 40px;
-	width: 100px;
-
 }
 .liInline {
-	height: 40px;
-	width: 100px;
+	padding-left: 23px;
+	padding-right: 23px;
+	margin-left: 10px;
+	margin-right: 10px;
 	font-family: OpenSans;
 	color: #ffffff;
-	font-size: 100%; /* Approximation due to font substitution */
+	font-size: 15px;
 	font-weight: 400;
 	line-height: 40px; /* Approximation due to font substitution */
 	text-align: justify;
@@ -64,53 +71,57 @@ a {
 	background: -o-linear-gradient(90deg, #2e2e2e 0%, #4a4a4a 100%);
 	background: -ms-linear-gradient(90deg, #2e2e2e 0%, #4a4a4a 100%);
 	background: linear-gradient(0deg, #2e2e2e 0%, #4a4a4a 100%);
-	height: 40px;
-	width: 100px;
 	border-left: 1px solid rgb(101, 99, 99);
 	border-right: 1px solid rgb(101, 99, 99);
+	padding-left: 22px;
+	padding-right: 22px;
 	
 }
 li {
 	list-style-type: none;
 }
-.maine {
+.main {
 	padding-top: 40px;
 	width: 970px;
-	height: 600px;
 	margin: 0 auto;
 	padding-bottom: 56px;
 }
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
 aside {
-	border-style: solid;
-	border-width: 1px;
-	border-color:  #c8c8c8;
+	background-image: url(../img/list.png);
+	background-size: cover;
 	box-sizing: border-box;
 	background-color:  #ffffff;
 	width: 240px;
-	height: 240px;
 	float:left;
 	
 }
 .aAside {
 	color:  #656363;
+	display: block;
 }
 .liAside {
 	font-family: OpenSans;
 	color:  #656363;
-	font-size: 100%;/* Approximation due to font substitution */
+	font-size: 14px;/* Approximation due to font substitution */
 	font-weight: 400;
-	line-height: 37.333px;/* Approximation due to font substitution */
+	line-height: 40px;/* Approximation due to font substitution */
 	text-align: left;
-	height: 40px;
-	border-style: solid;
-	border-width: 1px;
-	border-color:  #c8c8c8;
 	box-sizing: border-box;
-	background-color:  #ffffff;
 	padding-left: 18px;
+	background-image: url('../img/line_hor_1.png');
+    background-repeat: no-repeat;
+    background-position: bottom; 
 }
 .aAside:hover { 
-   color: #2c2b2b;
+    color: #2c2b2b;
 	padding-left: 32px;
 }
 article {
@@ -124,55 +135,56 @@ article {
 	font-weight: 400;
 	line-height: 21.333px;/* Approximation due to font substitution */
 	text-align: left;
-	width: 625px;
-	height: 141px;
 	margin-left: 24px;
 	margin-top: 29px;
 }
 .imgArticle {
+	height: 396px;
 	border-style: solid;
 	border-width: 1px;
 	border-color:  #c8c8c8;
 	box-sizing: border-box;
-	width: 678px;
-	
+	width: 675px;
+	display: table-cell;
+  text-align: center;
+  vertical-align: middle;	
 }
+
 footer {
 	clear: both;
 	margin: 0 auto;
-	height: 40px;
 	background-color:  #e1e1e1;
 	margin-bottom: 43px;
 	width: 966px;
+	overflow:auto
 } 
 .ulFooter {
-	width: 377px;
+	float: left;
 	display: inline;
-	margin-left: 18px;
+	margin-left: 24px;
 }
 .liFooter {
-	height: 40px;
-	width: 100px;
 	display: inline-block;
 	font-family: OpenSans;
 	color:  #2c2c2c;
-	font-size: 100%;/* Approximation due to font substitution */
+	font-size: 14px;/* Approximation due to font substitution */
 	font-weight: 400;
 	line-height: 40px;/* Approximation due to font substitution */
 	text-align: center;
-	
+	margin-right: 90px;	
 }
+
 .aFooter {
 	color:  #2c2c2c;
 }
-.liFooter:hover {
+.aFooter:hover {
 	text-decoration: underline;
 }
-span {
+.copyright {
 	float: right;
 	font-family: OpenSans;
 	color:  #2c2c2c;
-	font-size: 100%;/* Approximation due to font substitution */
+	font-size: 14px;/* Approximation due to font substitution */
 	font-weight: 400;
 	line-height: 40px;/* Approximation due to font substitution */
 	text-align: center;
