added first task from lesson 5

--- a/markup/home/lesson 5/mondrianTable/css/style.css
+++ b/markup/home/lesson 5/mondrianTable/css/style.css
@@ -20,6 +20,9 @@ td {
 	width: 57px;
 	border: 4px solid black;
 }
+.white {
+	background-color: white;
+}
 .yellow {
 	background-color: yellow;
 }
