--- a/markup/home/lesson 3/css/style.css
+++ b/markup/home/lesson 3/css/style.css
@@ -24,14 +24,10 @@ header {
 	-webkit-box-shadow: 0 0 3px 0 rgba(0,0,0,.3);
     -moz-box-shadow: 0 0 3px 0 rgba(0,0,0,.3);
     box-shadow: 0 0 3px 0 rgba(0,0,0,.3);
-    background-image: url(../img/container.png);
-    background-size: cover;
-
+    background-color: rgb(255, 255, 255);
 }
 .headImg {
-	margin-top: 50px;
 	width: 145px;
-	height: 40px;
 	margin-bottom: 30px;
 	margin-left: 45px;
 
@@ -155,9 +151,8 @@ footer {
 	clear: both;
 	margin: 0 auto;
 	background-color:  #e1e1e1;
-	margin-bottom: 43px;
 	width: 966px;
-	overflow:auto
+	
 } 
 .ulFooter {
 	float: left;
