--- a/markup/home/lesson 4/css/style.css
+++ b/markup/home/lesson 4/css/style.css
@@ -4,16 +4,14 @@
 }
 
 body {
-	background-image: url(../img/google_head.png),url(../img/background.png);
+	background-image: url(../img/background.png);
 	background-position: top;
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
 .container {
 	margin: 0 auto;
-	margin-top: 40px;
 	width: 1000px;
-	height: 1000px;
 	background-color: white;
 	border: 1px solid gray;
   -webkit-box-shadow: 1px 1px 1px 1px black;  
@@ -22,7 +20,7 @@ body {
 }
 header {
 	margin-top: 10px;
-	padding-top: 10px;
+	padding-top: 48px;
 	margin-left: 27px;
 	margin-right: 27px;
 	margin-bottom: 6px;
@@ -30,6 +28,9 @@ header {
 
 }
 .headerImg {
+	display: inline-block;
+}
+.imgDiv {
 	display: inline-block;
 }
 .navHeader {
@@ -65,7 +66,6 @@ figure {
 	font-weight: 400;
 	text-decoration: underline;
 	text-align: left;
-	cursor:pointer;
 }
 figcaption {
 	text-align: center;
@@ -87,24 +87,24 @@ nav ul li a {
 	font-weight: 400;
 	text-align: center;
 	display: inline-block;
-	width:140px;
+	width: 100px;
 	
 }
 nav ul li {
 	display: inline-block;
-	height: 30px;
 	/*display: table-cell;
     vertical-align: middle;*/
 	
 }
 nav ul {
 	background-color: rgb(48, 48, 48);
-	height: 34px;
+	line-height: 34px;
 }
 nav {
 	width: 100%;
 	height: 34px;
 	border-bottom: 2px solid black;
+	background-color: rgb(48, 48, 48);
 }
 .dropdown{
 	position: relative;
@@ -127,10 +127,8 @@ nav {
 	background: #303030;
 	color: white;
 	display: block;
-	padding: 10px 37px 0 7px;
-	height: 25px;
+	padding: 0 20px;
 	font-size: 12px; 
-	width: 98px;
 }
 .menu li{
 	float: left;
@@ -143,6 +141,11 @@ nav {
 	line-height: 24px;
 	text-align: left;
 	width: 100%;
+
+}
+.clearfix {
+  overflow: auto;
+  zoom: 1;
 }
 h3 {
 	font-family: Tahoma;
@@ -177,7 +180,6 @@ h3 {
 	font-size: 100%;
 	font-weight: 400;
 	text-align: center;
-	height: 40px;
 	line-height: 30px;
 	margin-top: 5px;
 }
