--- a/markup/home/lesson 6/css/style.css
+++ b/markup/home/lesson 6/css/style.css
@@ -42,6 +42,10 @@ header {
 	-webkit-border-radius: 4px;
 	border: 0px solid #000000;
 }
+ a {
+	text-decoration: none;
+	cursor: pointer;
+}
 form {
 	padding-left: 24px;
 	background-image: url(../img/human.png);
@@ -52,12 +56,49 @@ form {
 input {
 	display: inline-block;
 	width: 113px;
-	height: 16px;
+	height: 14px;
 	border: none;
 	border-radius: 2px;
 	margin-left: 2px;
 	margin-right: 2px;
 }
+
+::-webkit-input-placeholder {
+   font-family: 'Lucida Sans Unicode';
+	color:  #97a2a6;
+	font-size: 10.53px;
+	font-weight: 400;
+	line-height: 16px;
+	padding-left: 5px;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   font-family: 'Lucida Sans Unicode';
+	color:  #97a2a6;
+	font-size: 10.53px;
+	font-weight: 400;
+	line-height: 16px;
+	padding-left: 5px;
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   font-family: 'Lucida Sans Unicode';
+	color:  #97a2a6;
+	font-size: 10.53px;
+	font-weight: 400;
+	line-height: 16px;
+	padding-left: 5px; 
+}
+
+:-ms-input-placeholder {  
+   font-family: 'Lucida Sans Unicode';
+	color:  #97a2a6;
+	font-size: 10.53px;
+	font-weight: 400;
+	line-height: 16px;
+	padding-left: 5px;
+}
+
 label {
 	font-family: 'Lucida Sans Unicode';
 	color: #ffffff;
@@ -181,6 +222,7 @@ nav ul li:hover {
 }
 .main {
 	margin-left: 20px;
+	margin-right: 20px;
 	float: left;
 	background-color:  #ffffff;
 	background: -webkit-linear-gradient(90deg, rgba(35, 75, 93, 0.49) 0%, rgba(129, 150, 159, 0.49) 57%, rgba(201, 207, 209, 0.49) 100%);
@@ -189,12 +231,13 @@ nav ul li:hover {
 	background: -ms-linear-gradient(90deg, rgba(35, 75, 93, 0.49) 0%, rgba(129, 150, 159, 0.49) 57%, rgba(201, 207, 209, 0.49) 100%);
 	background: linear-gradient(0deg, rgba(35, 75, 93, 0.49) 0%, rgba(129, 150, 159, 0.49) 57%, rgba(201, 207, 209, 0.49) 100%);
 	width: 527px;
+	border-radius: 4px;
 }
 .leftMenu {
 	float: left;
 }
 .rightMenu {
-	float: right;
+	float: left;
 }
 .imgContainer {
 	text-align: center;
@@ -323,7 +366,6 @@ transform: scaleY(1.0003);
 	border-width: 1px;
 	border-color:  #79878d;
 	background-color:  #ffffff;
-	box-shadow: 1px 3px 3px 0px rgba(150, 150, 150, 0.75);
 	border-radius: 15px;
 	border-style: solid;
 	margin-bottom: 5px;
@@ -332,6 +374,7 @@ transform: scaleY(1.0003);
 	background-position: left 3px center;
 	background-size: 22px 21px;
 	padding-left: 30px;
+	width: 120px;
 }
 .mainHeader {
 	font-family: 'Lucida Sans Unicode';
@@ -346,6 +389,7 @@ transform: scaleY(1.0003);
 	background-position: center left 3px;
 	background-size: 22px 21px;
 	margin-bottom: 20px;
+	width: 130px;
 }
 .headerRight {
 	background-image: url(../img/circ_icon.png);
@@ -353,6 +397,8 @@ transform: scaleY(1.0003);
 	background-position: center left 3px;
 	background-size: 22px 21px;
 	padding-left: 30px;
+	box-shadow: none;
+	width: 120px;
 }
 .right ul li {
 	font-family: 'Lucida Sans Unicode';
@@ -379,7 +425,7 @@ transform: scaleY(1.0003);
 	height: 26px;
 	font-family: Arial;
 	color:  #e5e9ea;
-	font-size: 11px;
+	font-size: 12px;
 	font-weight: 400;
 	letter-spacing: 0.44px;
 	text-align: center;
@@ -387,20 +433,21 @@ transform: scaleY(1.0003);
 	margin-top: 10px;
 }
 .clearfix {
-     visibility: hidden;
-     display: block;
+     /*display: block;
      font-size: 0;
      content: " ";
      clear: both;
-     height: 0;
+     height: 0;*/
+     clear: both;
 }
 .prefooter {
-	margin-top: 40px;
+	padding-top: 30px;
+	padding-bottom: 20px;
 	text-align: center;
 }
 .prefooter img {
 	margin-left: 10px;
-	margin-right: 10px;
+	margin-right: 10px
 }
 footer {
 	margin-top: 20px;
