--- a/markup/home/lesson 4/css/style.css
+++ b/markup/home/lesson 4/css/style.css
@@ -56,8 +56,8 @@ ul {
 	list-style-type: none;
 }
 figure {
-	float:left;
-    margin-right:10px;
+	display: inline-block;
+
     text-align:center;
     padding:0px;
     font-family: Tahoma;
