--- a/markup/home/lesson 4/css/style.css
+++ b/markup/home/lesson 4/css/style.css
@@ -27,6 +27,9 @@ header {
 	height: 158px;
 
 }
+.navHeader {
+	display: inline-block;
+}
 .headerImg {
 	display: inline-block;
 }
@@ -34,7 +37,9 @@ header {
 	display: inline-block;
 }
 .navHeader {
-	float: right;
+	position: relative;
+	left: 320px;
+	bottom: 13px;
 	font-family: Tahoma;
 	color:  rgba(18, 138, 167, 0.8);
 	font-size: 12px;
@@ -57,7 +62,6 @@ ul {
 }
 figure {
 	display: inline-block;
-
     text-align:center;
     padding:0px;
     font-family: Tahoma;
