--- a/markup/home/lesson 4.1/css/style.css
+++ b/markup/home/lesson 4.1/css/style.css
@@ -91,8 +91,6 @@ nav ul li a {
 	font-weight: 400;
 	text-align: center;
 	display: inline-block;
-	width: 100px;
-	
 }
 nav ul li {
 	display: inline-block;
@@ -131,7 +129,7 @@ nav {
 	background: #303030;
 	color: white;
 	display: block;
-	padding: 0 20px;
+	padding: 0 40px;
 	font-size: 12px; 
 }
 .menu li{
@@ -140,11 +138,10 @@ nav {
 .content {
 	font-family: Tahoma;
 	color:  #424c43;
-	font-size: 100%;
+	font-size: 16px;
 	font-weight: 400;
 	line-height: 24px;
 	text-align: left;
-	width: 100%;
 
 }
 .clearfix {
