--- a/markup/home/lesson 5/lesson 5 First task/css/style.css
+++ b/markup/home/lesson 5/lesson 5 First task/css/style.css
@@ -1,17 +1,11 @@
 @font-face {
-	font-family: "HelveticaNeue";
-	scr: url(../fonts/HelveticaNeue.ttf);
+	font-family: "Helvetica";
+	scr: url(../fonts/helveticalight-webfont.ttf);
+}
+body {
+	font-family: "Helvetica", Arial, Tahoma, sans-serif;
 }
 
-body {
-	background-image: url(../img/Background.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-.container {
-	width: 1215px;
-	margin: 0 auto;
-}
 header {
 	overflow:auto;
 	background-image: url(../img/Pattern.png), url("../img/Noise.png"), url("../img/Layer 13.png");
@@ -22,10 +16,9 @@ header {
 }
 .nav ul {
 	display: inline;
-	
 }
 .navList {
-	font-family: "HelveticaNeue";
+	font-family: Helvetica;
 	color:  #60b5ed;
 	font-size: 14px;
 	font-weight: 400;
@@ -59,11 +52,13 @@ a {
 .headTip {
 	padding-bottom: 10px;
 	padding-top: 10px;
+	padding-left: 40px;
+	padding-right: 10px;
 	color:  #fefefe;
 	font-size: 14px;
 	font-weight: 400;
 	display: inline;
-	font-family: HelveticaNeue;
+	font-family: Helvetica;
 	line-height: 14px;
 	text-align: left;
 	background-image: url("../img/Layer36.png"), url(../img/inventicons29.png) ;
@@ -77,20 +72,25 @@ a {
 	padding-left: 12px;
 	padding-right: 13px;
 	display: inline;
-	font-family: HelveticaNeue;
+	font-family: Helvetica;
 	color:  #ffffff;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 14px;
 	text-align: left;
+}
+.button:hover {
 	background-image: url(../img/Layer16.png);
 }
 .button a {
 	color:  #ffffff;
+	text-decoration: underline;
 }
 .main {
 	height: 1028px;
 	background-image: url(../img/BackgroundСopy.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 
 }
 .formFields {
@@ -112,6 +112,35 @@ a {
 	text-align: center;
 	margin-bottom: 3px;
 }
+.facebook {
+	width: 275px;
+    line-height: 35px;
+    background: url(../img/facebook.jpg);
+    color: #fff;
+    font-weight: bold;
+    /*border-top: 1px solid #7889b7;*/
+    border-radius: 5px;
+    border: none;
+}
+.facebook:hover{
+	cursor: pointer;
+}
+.facebook_left{
+    float: left;
+    padding: 0 15px;
+    font-size: 21px;
+    border-right: 1px solid #213c71;
+}
+.facebook_right{
+    float: left;
+    width: 210px;
+    margin-right: 1px;
+    text-align: center;
+    border-left: 1px solid #4e67a9;
+}
+.thin{
+    font-weight: 100;
+}
 .headForm {
 	background-color: rgba(0, 0, 0, 0.7);
 }
@@ -129,7 +158,7 @@ a {
 	padding-bottom: 20px;
 }
 .or {
-	font-family: HelveticaNeue;
+	font-family: Helvetica;
 	color: #999999;
 	font-size: 14px;
 	font-weight: 400;
@@ -147,12 +176,22 @@ input {
 	border: none;
 	background-image: url(../img/Layer1.png);
 	margin-bottom: 15px;
-	font-family: HelveticaNeue;
+	font-family: Helvetica;
 	color:  #cccccc;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 16px;
 	text-align: left;
+}
+.textArea:focus {
+	background-color: #1b5288;
+	background-image: none;
+	color: #fff;
+    border-bottom: 1px solid #699bcd;
+    -webkit-box-shadow: 0px 0px 6px 1px rgba(85,142,183,1);
+    -moz-box-shadow: 0px 0px 6px 1px rgba(85,142,183,1);
+    box-shadow: 0px 0px 6px 1px rgba(85,142,183,1);
+    outline: none;
 }
 ::-webkit-input-placeholder {
    padding-left: 19px;
@@ -177,7 +216,7 @@ input[type="checkbox"] {
 	margin-bottom: 3px;
 }
 label {
-	font-family: HelveticaNeue;
+	font-family: Helvetica;
 	color: #cccccc;
 	font-size: 14px;
 	font-weight: 400;
@@ -198,7 +237,7 @@ input[type=submit] {
 }
 .warning {
 	margin-top: 15px;
-	font-family: HelveticaNeue;
+	font-family: Helvetica;
 	color: #cccccc;
 	font-size: 11px;
 	font-weight: 400;
