--- a/markup/home/lesson 5/lesson 5 First task/css/style.css
+++ b/markup/home/lesson 5/lesson 5 First task/css/style.css
@@ -47,6 +47,7 @@ header {
 }
 a {
 	text-decoration: none;
+	color: #fff;
 }
 .headTip a {
 	color: #fefefe;
@@ -161,7 +162,6 @@ a {
 	color: #999999;
 	font-size: 14px;
 	font-weight: 400;
-	
 	text-align: center;
 	background-image: url(../img/Layer49.png);
 	background-repeat: no-repeat;
