--- a/markup/home/lesson 5/lesson 5 First task/css/style.css
+++ b/markup/home/lesson 5/lesson 5 First task/css/style.css
@@ -1,10 +1,9 @@
-@font-face {
+﻿@font-face {
 	font-family: "Helvetica";
 	scr: url(../fonts/helveticalight-webfont.ttf);
 }
 body {
 	font-family: "Helvetica", Arial, Tahoma, sans-serif;
-	height: 1028px;
 	background-image: url(../img/BackgroundСopy.png);
 	background-repeat: no-repeat;
 	background-size: cover;
