--- a/markup/home/lesson 6/css/style.css
+++ b/markup/home/lesson 6/css/style.css
@@ -2,10 +2,17 @@
 	font-family: 'Lucida Sans Unicode';
 	scr: url(../fonts/lsansuni.ttf);
 }
+.clearfix:after{
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  visibility: hidden;
+  font-size: 0;
+}
 .wrapper {
 	width: 941px;
 	margin: 0 auto;
-	
 }
 header {
 	margin-top: 18px;
@@ -116,26 +123,26 @@ button {
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 20px;
-	text-decoration: underline;
 	text-align: left;
 	background-color: transparent;
 	border: none;
 	margin-left: 14px;
 	margin-right: 6px;
 }
+button:hover {
+	text-decoration: underline;
+}
 .headerMenu {
-	width: 77px;
 	display: inline-block;
-	margin-left: 18px;
-	align-self: center;
-	height: 20px;
-	background-image: url(../img/home.png), url(../img/links.png), url(../img/mail.png);
-	background-repeat: no-repeat, no-repeat, no-repeat;
-	background-position: center left 8px, center  center, center right 8px;
+	margin-left: 13px;
 	border: 1px solid rgb(193, 200, 203);
 	border-radius: 12px;
+	padding: 3px 10px;
 	position: relative;
-	right: 9px;
+	bottom: 5px;
+}
+.headerMenu img {
+	margin: 0 2px;
 }
 .slider {
 	margin-top: 5px;
@@ -161,7 +168,6 @@ nav ul li {
 	display: inline-block;
 	list-style-type: none;
 	font-family: 'Lucida Sans Unicode';
-	color:  #b1bcc0;;
 	font-size: 13.64px;
 	font-weight: 400;
 	line-height: 35px;
@@ -169,13 +175,20 @@ nav ul li {
 	padding-left: 13px;
 	padding-right: 11px;
 }
+.navHref {
+	color:  #b1bcc0;
+	/*margin-left: 3px;
+	margin-right: 3px;*/
+}
 nav ul li:hover {
 	background-color: rgb(29, 96, 129);
 	border-radius: 12px;
+	line-height: 20px;
 }
 .sale {
 	display: inline-block;
-	float: right; 
+	float: right;
+	margin-left: 23px; 
 
 }
 .sale ul {
@@ -297,6 +310,9 @@ h2 {
 	text-align: center;	
 	padding-top: 10px;
 }
+h2 a {
+	color: #206988;
+}
 .subheader {
 	font-family: 'Lucida Sans Unicode';
 	color:  #1f2528;
@@ -355,8 +371,10 @@ ul li a {
 }
 
 .goods {
-	margin: 10px;
-	width: 27%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 25px;
+	width: 127px;
 	display: inline-block;
 
 }
@@ -472,7 +490,9 @@ footer {
 	text-align: center;
 	transform: scaleY(1.0003);/* свойства ширины и высоты были исключены, поскольку было выполнено трансформирование */
 	text-decoration: none;
-
+}
+.footerNav ul li a:hover {
+	color:  #52accb;
 }
 .footerNav ul {
 	text-align: center;
