--- a/markup/home/lesson 7-9 ver 2/css/style.css
+++ b/markup/home/lesson 7-9 ver 2/css/style.css
@@ -287,13 +287,14 @@ ul li {
 	
 }
 h3 {
-	font-family: OpenSans;
+	font-family: LeagueGothic;
 	color:  #454545;
-	font-size: 16px;/* Приближение из-за подстановки шрифтов */
+	font-size: 14px;/* Приближение из-за подстановки шрифтов */
 	font-weight: 700;
 	line-height: 24px;/* Приближение из-за подстановки шрифтов */
 	text-align: left;
 	overflow: hidden;
+	padding-left: 10px;
 }
 article p {
 	font-family: OpenSans;
@@ -302,6 +303,7 @@ article p {
 	font-weight: 300;
 	line-height: 24px;/* Приближение из-за подстановки шрифтов */
 	text-align: left;
+	padding-left: 10px;
 	overflow: hidden;
 }
 article img {
