Added files via upload

--- a/markup/home/lesson 7-9 ver 2/css/style.css
+++ b/markup/home/lesson 7-9 ver 2/css/style.css
@@ -3,9 +3,6 @@
 	padding: 0;
 
 }
-/*body {
-	overflow-x: hidden;
-}*/
 @font-face {
 	font-family: 'LeagueGothic';
 	src: url(../fonts/LeagueGothic-Regular.otf);
@@ -41,9 +38,9 @@ li a:focus, li a:hover {
 header a {
   font-family: LeagueGothic;
 	color:  #ffffff;
-	font-size: 48px;/* Approximation due to font substitution */
+	font-size: 48px;
 	font-weight: 400;
-	line-height: 33.724px;/* Approximation due to font substitution */
+	line-height: 33.724px;
 	text-align: left;
 	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
@@ -88,7 +85,6 @@ header a {
 
 .main-nav li a {
   display: block;
-  /*padding: 28px 34px;*/
   font-size: 24px;
   padding: 5px;
 }
@@ -132,24 +128,24 @@ ul li {
 .slider-header {
 	font-family: LeagueGothic;
 	color:  #fefefe;
-	font-size: 60px;/* Approximation due to font substitution */
+	font-size: 60px;
 	font-weight: 400;
 	text-align: left;
 }
 .sub-header {
 	font-family: LeagueGothic;
 	color:  #eebfff;
-	font-size: 32px;/* Approximation due to font substitution */
+	font-size: 32px;
 	font-weight: 400;
-	line-height: 36px;/* Approximation due to font substitution */
+	line-height: 36px;
 	text-align: left;
 }
 .item p {
 	font-family: OpenSans;
 	color:  #ffffff;
-	font-size: 18px;/* Approximation due to font substitution */
+	font-size: 18px;
 	font-weight: 300;
-	line-height: 24px;/* Approximation due to font substitution */
+	line-height: 24px;
 	text-align: left;
 	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 	width: 540px;
@@ -158,8 +154,8 @@ ul li {
 .block-wrapper {
 	max-width: 960px;
 	margin: 0 auto;
-	display:                 flex;
-    display:                 -webkit-flex; /* Safari */
+	display: flex;
+    display: -webkit-flex; /* Safari */
   flex-wrap:               wrap;
   -webkit-flex-wrap:       wrap;         /* Safari */
   justify-content:         center;
@@ -198,7 +194,7 @@ ul li {
 	font-size: 16px;
 	max-width: 180px;
 	font-weight: 300;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 	text-shadow: 0px 1px 0px #0f1518;
 	clear: both;
@@ -209,9 +205,9 @@ ul li {
 	padding-top: 10px;
 	font-family: LeagueGothic;
 	color:  #ffffff;
-	font-size: 18px;/* Приближение из-за подстановки шрифтов */
+	font-size: 18px;
 	font-weight: 400;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 	text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.8);
 	padding-bottom: 30px;
@@ -241,17 +237,17 @@ ul li {
 .header-photo {
 	font-family: LeagueGothic;
 	color:  #454545;
-	font-size: 24px;/* Приближение из-за подстановки шрифтов */
+	font-size: 24px;
 	font-weight: 400;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 }
 .text-photo {
 	font-family: OpenSans;
 	color:  #454545;
-	font-size: 16px;/* Приближение из-за подстановки шрифтов */
+	font-size: 16px;
 	font-weight: 300;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 	text-shadow: 0px 1px 0px #ffffff;
 	max-width: 300px;
@@ -260,9 +256,9 @@ ul li {
 .pink {
 	font-family: LeagueGothic;
 	color:  #edbfff;
-	font-size: 24px;/* Приближение из-за подстановки шрифтов */
+	font-size: 24px;
 	font-weight: 400;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 	text-shadow: 0px 1px 0px #ffffff;
 }
@@ -279,9 +275,9 @@ ul li {
 .recentUpdates h2 {
 	font-family: LeagueGothic;
 	color:  #454545;
-	font-size: 24px;/* Приближение из-за подстановки шрифтов */
+	font-size: 24px;
 	font-weight: 400;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 	text-shadow: 0px 1px 0px #ffffff;
 	
@@ -289,9 +285,9 @@ ul li {
 h3 {
 	font-family: LeagueGothic;
 	color:  #454545;
-	font-size: 14px;/* Приближение из-за подстановки шрифтов */
+	font-size: 14px;
 	font-weight: 700;
-	line-height: 24px;/* Приближение из-за подстановки шрифтов */
+	line-height: 24px;
 	text-align: left;
 	overflow: hidden;
 	padding-left: 10px;
@@ -299,7 +295,7 @@ h3 {
 article p {
 	font-family: OpenSans;
 	color:  #454545;
-	font-size: 16px;/* Приближение из-за подстановки шрифтов */
+	font-size: 16px;
 	font-weight: 300;
 	line-height: 24px;/* Приближение из-за подстановки шрифтов */
 	text-align: left;
@@ -316,9 +312,9 @@ article img {
 .moreBlog {
 	font-family: LeagueGothic;
 	color: #454545;
-	font-size: 18px; /* Приближение из-за подстановки шрифтов */
+	font-size: 18px; 
 	font-weight: 400;
-	line-height: 30px; /* Приближение из-за подстановки шрифтов */
+	line-height: 30px; 
 	text-align: left;
 	text-shadow: 0px 1px 0px #ffffff;
 	float: right;
@@ -352,20 +348,14 @@ footer {
 	padding-bottom: 70px;
 }
 .copyright {
-	font-family: OpenSans;
 	color: #ffffff;
-	font-size: 12px; /* Приближение из-за подстановки шрифтов */
-	font-weight: 300;
-	line-height: 33.724px; /* Приближение из-за подстановки шрифтов */
+	font-size: 12px; 
 	text-align: center;
 	font-family: OpenSans;
-	color: #ffffff;
-	font-size: 12px; /* Приближение из-за подстановки шрифтов */
 	font-weight: 700;
-	line-height: 33.724px; /* Приближение из-за подстановки шрифтов */
+	line-height: 33.724px;
 	text-align: center;
 	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.4);
-	text-align: center;
 }
 @media screen and (max-width: 980px) {
 
