--- a/markup/home/Eventide/code/style.css
+++ b/markup/home/Eventide/code/style.css
@@ -19,6 +19,7 @@ body {
 }
 header {
 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/3.jpg");
+	width: 100%;
 	height: 670px;
 
 }
