--- a/markup/home/lesson 7-9 ver 2/css/style.css
+++ b/markup/home/lesson 7-9 ver 2/css/style.css
@@ -46,7 +46,7 @@ header a {
 }
 
 .logo {
-  width: 155px;
+	width: 135px;
   float: left;
   align-self: center;
 }
@@ -91,6 +91,8 @@ header a {
 
 .main-nav a:hover {
   text-decoration: underline;
+  -moz-text-decoration-color: #eebfff; /* Code for Firefox */
+    text-decoration-color: #eebfff;
 }
 
 a {
@@ -105,7 +107,7 @@ ul li {
 .carousel {
 	width: 100%;
 	height: 350px;
-	margin-top: 30px;
+	margin-top: 10px;
 }
 .item {
 	width: 70%;
@@ -357,9 +359,67 @@ footer {
 	text-align: center;
 	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.4);
 }
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 560px) {
 
-	.phone {
-		display: none;
+header a {
+  font-family: LeagueGothic;
+	color:  #ffffff;
+	font-size: 48px;
+	font-weight: 400;
+	line-height: 33.724px;
+	text-align: left;
+	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.logo {
+  float: none;
+  margin: 0 auto;
+  align-self: center;
+}
+
+.main-nav {
+  float: none;
+  padding-top: 10px;
+}
+.main-nav {
+width: 180px;
+margin: 0 auto;
+border: 1px solid black;
+border-radius: 20px;
+padding: 0;
+background-color: rgba(49,37,56, 0.8);
+}
+.main-nav li {
+  width: 180px;
+  padding: 0;
+  float: none;
+  margin: 0 auto;
+  text-transform: uppercase;
+  text-align: right;
+  
+}
+.main-nav li:last-child {
+  margin-right: 0;
+}
+
+.main-nav li a {
+  display: block;
+  font-size: 24px;
+  padding: 5px;
+  text-align: center;
+}
+
+.main-nav a:hover {
+  text-decoration: underline;
+  background-color: rgba(43,34,49, 0.8);
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+	ul li {
+	  list-style: none;
 	}
 }
