--- a/markup/home/decorum_test/style/style.css
+++ b/markup/home/decorum_test/style/style.css
@@ -238,10 +238,11 @@ nav {
 }
 aside {
 	float: left;
-	width: 25%;
+	width: 23%;
+	padding-left: 10px;
 }
 main {
-	float: left;
+	float: right;
 	width: 75%;
 }
 .content-nav {
@@ -474,6 +475,12 @@ input[name="q"] {
 	.header-left-logo {
 	float: none;
 	width: 50%;
+	margin: 0 auto;
+}
+main {
+	float: none;
+}
+.main-block {
 	margin: 0 auto;
 }
 .header-right {
