--- a/markup/home/Technotendencyltd/css/style.css
+++ b/markup/home/Technotendencyltd/css/style.css
@@ -10,13 +10,14 @@
 
 }
 .wrapper_header {
-	max-width: 982px;
+	max-width: 1022px;
 	margin: 0 auto;
 	position: relative;
 	padding-right: 8px;
 	padding-left: 8px;
 }
 .header_leftside {
+	width: 43%;
 	float: left;
 	position: absolute;
 }
@@ -36,8 +37,12 @@
 	background-color: #e8e8e8;
 }
 .header_picture {
+	width: 100%;
 	position: relative;
 	z-index: 2;
+}
+.header_picture img {
+	width: 100%;
 }
 .wrapper_footer {
 	max-width: 982px;
@@ -63,8 +68,13 @@
 	padding-right: 0;
 }
 .header_logo {
+	width: 308px;
+	height: 70px;
 	clear: both;
 	float: right;
+}
+.header_logo_img {
+	width: 308px;
 }
 .nav {
 	clear: both;
@@ -316,7 +326,7 @@ text-align: left;
 	max-width: 826px;
 }
 .news_item {
-	padding-bottom: 10px;
+	padding-bottom: 30px;
 }
 .news_header {
 	padding-bottom: 25px;
@@ -364,7 +374,7 @@ width: 60%;
 .contacts_wrapper {
 	margin: 0 auto;
 	width: 100%;
-	max-width: 826px;
+	max-width: 908px;
 }
 .contacts_text {
 	float: left;
@@ -372,7 +382,7 @@ width: 60%;
 }
 .contacts_form {
 	float: right;
-	width: 470px;;
+	width: 52%;;
 }
 .contacts_head {
 	font-family: Arial;
@@ -396,29 +406,29 @@ text-align: left;
     padding-left: 16px;
     padding-right: 5px;
     margin-bottom: 13px;
-    width: 470px;
+    width: 100%;
     font-family: Arial;
-color:  #939393;
-font-size: 14px;
-font-weight: 400;
-line-height: 30px;
-text-align: left;
+	color:  #939393;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 30px;
+	text-align: left;
 }
 .form_input_code {
-	width: 236px;
+	width: 100%;
 	height: 47px;
 	padding-left: 16px;
     padding-right: 5px;
     margin-bottom: 13px;
     font-family: Arial;
-color:  #939393;
-font-size: 14px;
-font-weight: 400;
-line-height: 30px;
-text-align: left;
+	color:  #939393;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 30px;
+	text-align: left;
 }
 .form_input_message {
-	width: 470px;
+	width: 100%;
 	height: 127px;
 	padding-top: 10px;
 	padding-left: 16px;
@@ -470,3 +480,11 @@ input {
 }
 
 
+.footer_img {
+	width: 100%;
+}
+.footer_logo {
+	width: 247px;
+height: 57px;
+padding-bottom: 10px;
+}
