--- a/markup/home/Technotendencyltd/css/style.css
+++ b/markup/home/Technotendencyltd/css/style.css
@@ -373,7 +373,7 @@ width: 60%;
 /*contacts*/
 .contacts_wrapper {
 	margin: 0 auto;
-	width: 100%;
+	width: 90%;
 	max-width: 908px;
 }
 .contacts_text {
@@ -487,4 +487,415 @@ input {
 	width: 247px;
 height: 57px;
 padding-bottom: 10px;
+}
+
+
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+
+#content {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.content_wrapper {
+  width: 100%;
+  height: 422px;
+}
+
+.starq-slider {
+  padding: 0;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  height: 422px;
+}
+
+.starq-slider .carusel_item {
+  letter-spacing: normal;
+  display: inline-block;
+  vertical-align: top;
+  width: 12.5%;
+  height: 300px;
+  position: relative;
+  /*cursor: -webkit-grab;
+  cursor: grab;*/
+}
+
+.starq-slider .carusel_item:active {
+  /*cursor: -webkit-grabbing;
+  cursor: grabbing;*/
+}
+
+.starq-slider .carusel_text {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  color: #eee;
+  font-size: 12px;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 5px;
+}
+
+.starq-slider .carusel_list {
+  position: relative;
+  white-space: nowrap;
+  letter-spacing: -0.3em;
+  padding: 0;
+  margin: 0;
+  border-top: 3px solid #fff;
+  height: 97px;
+}
+
+.starq-slider .active:before {
+  content: "";
+  position: absolute;
+  top: -16px;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 8px solid transparent;
+  border-bottom: 8px solid #fff;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 2;
+}
+
+.starq-slider .arrow {
+  position: absolute;
+  bottom: 18%;
+  z-index: 10;
+  display: block;
+  cursor: pointer;
+}
+
+.starq-slider .arrow-left {
+	left: 47%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.starq-slider .arrow-right {
+	left: 51%;
+}
+
+.callback {
+  position: absolute;
+  top: 53px;
+  right: 0;
+  cursor: pointer;
+}
+
+.callback:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 10px;
+  height: 0;
+  background-color: #0394aa;
+  transition: .3s;
+}
+
+.callback:hover:after {
+  height: 2px;
+  width: 100%;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.popup h3 {
+  font-size: 16px;
+  text-align: center;
+  margin: 10px auto;
+  text-transform: uppercase;
+}
+
+.popup_description {
+  text-align: center;
+  color: #999;
+  font-size: 14px;
+  display: block;
+  width: 60%;
+  margin: 10px auto;
+}
+
+.popup_input {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  font-size: 14px;
+  padding: 10px;
+}
+
+.popup_input:focus {
+  outline: 0;
+}
+
+.popup_box {
+  display: block;
+  float: left;
+  width: 50%;
+  padding: 10px;
+  position: relative;
+}
+
+.popup_inside {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 101;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 25px 25px 45px 25px;
+  box-shadow: 0px 0px 23px 0px #00394a;
+  width: 662px;
+}
+
+.popup-form {
+  padding: 10px 10px 30px 10px;
+  border: 1px solid #999;
+  position: relative;
+}
+
+.popup-label {
+  font-size: 14px;
+}
+
+.popup_submit {
+  display: block;
+  width: 25%;
+  background-color: #fff;
+  height: 40px;
+  margin: 0;
+  position: absolute;
+  bottom: -20px;
+  right: 3%;
+  transition: .3s;
+  border: 1px solid #00394a;
+}
+
+.popup_submit:hover {
+  background-color: #00394a;
+  color: #fff;
+}
+
+.popup_close {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.popup_close {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.callback_link {
+  cursor: pointer;
+}
+
+@media (max-width: 992px) {
+  .popup_inside {
+    width: 90%;
+    padding: 25px 25px 5px 25px;
+  }
+  .popup_submit {
+    width: 60%;
+  }
+  .call_form {
+    border: 0;
+  }
+}
+
+.popup-description {
+  text-align: center;
+  font-size: 14px;
+  display: block;
+  width: 60%;
+  margin: 10px auto;
+}
+
+.popup_message {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.quartz-slider {
+  white-space: nowrap;
+  letter-spacing: -0.3em;
+  position: relative;
+  overflow: hidden;
+}
+
+.quartz-slider .slider_list {
+  position: relative;
+  left: 0;
+}
+
+.quartz-slider .slider_item {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.quartz-slider .arrow {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.quartz-slider .arrow-left {
+  left: 0;
+  -webkit-transform: translateY(-50%) scaleX(-1);
+  transform: translateY(-50%) scaleX(-1);
+}
+
+.quartz-slider .arrow-right {
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.carusel_list {
+  display: none;
+}
+.starq-slider .arrow-left {
+	 -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+.carousel_item_container {
+	display: none;
+	width: 100%;
+	height: 420px;
+	position: relative;
+}
+.carousel_text {
+	background-color:  rgba(0, 0, 0, 0.48);
+	position: absolute;
+	width: 100%;
+	height: 60%;
+	top: 110px;
+}
+
+.carousel_text_wrapper {
+	margin: 0 auto;
+
+}
+
+.carousel_header {
+	padding: 34px 150px 0 150px;
+	font-family: Arial;
+	color:  #ffffff;
+	font-size: 30px;
+	font-weight: 700;
+	line-height: 48px;
+	text-align: center;
+	text-transform: uppercase;
+}
+.carousel_text_item {
+	font-family: Arial;
+	color:  #fefefe;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 18px;
+	text-align: center;
+	padding-left: 150px;
+	padding-right: 150px;
+	padding-top: 15px;
+}
+.index_container {
+	padding-top: 30px;
+}
+
+														/*26.04 Artem*/
+.text_blue {
+	color: #03b0c8;
+}
+
+.arrow {
+	opacity: 0.7;
+	position: absolute;
+	top: 73%;
+	width: 35px;
+	z-index: 1;
+	-webkit-transition: opacity 0.2s ;
+	-moz-transition: opacity 0.2s ;
+	-o-transition: opacity 0.2s ;
+	transition: opacity 0.2s ;
+	cursor: pointer;
+}
+
+.prev {
+	left: 47%;
+}
+
+.next {
+	left: 51%;
+}
+
+.arrow:hover {
+	opacity: 1;
+}
+
+.slider_item {
+	position: absolute;
+	width: 100%;
+	height: 420px;
+}
+
+@media (max-width: 1000px) {
+	.carousel_header {
+		font-size: 20px;
+	}
+
+	.carousel_text_item {
+		font-size: 9px;
+	}
+
+	.prev {
+		left: 45%;
+	}
+
+	.next {
+		left: 53%;
+	}
+
+}
+
+@media (max-width: 760px) {
+	.carousel_text {
+		display: none;
+	}
+
+	.content_wrapper {
+		height: 250px;
+	}
+
+	.arrow {
+		display: none;
+	}
 }
