--- a/markup/home/Technotendencyltd/css/style.css
+++ b/markup/home/Technotendencyltd/css/style.css
@@ -907,4 +907,11 @@ padding-bottom: 10px;
 	.footer_address {
 		left: 40%;
 	}
+	.submit_button {
+	
+	float: none;
+	left: 0;
+	margin-top: 20px;
+	
+}
 }
