--- a/markup/home/Technotendencyltd/css/style.css
+++ b/markup/home/Technotendencyltd/css/style.css
@@ -902,7 +902,7 @@ padding-bottom: 10px;
 
 @media (max-width: 768px) {
 	.footer_logo_container {
-		margin-right: 40px;
+		margin-right: 10px;
 	}
 	.footer_address {
 		left: 40%;
@@ -913,5 +913,8 @@ padding-bottom: 10px;
 	left: 0;
 	margin-top: 20px;
 	
+}
+.copyright {
+	width: 30%;
 }
 }
