--- a/site_second _some/css/style.css
+++ b/site_second _some/css/style.css
@@ -821,14 +821,14 @@ text-decoration: none!important;
 .slideContainerHeadline.first {
   box-shadow: 0px 1px 18.69px 2.31px rgba(50, 50, 51, 0.29);
   background-color:  rgb(245,245,245);
-  height: auto;
+  height: 140px;
 }
 @media (max-width: 720px) {
   .hamburger {
     display: block;
   }
 }
-@media (max-width: 960px) {
+@media only screen (max-width: 960px) {
   .navigationMenu_main {
     display: none;
   }
@@ -839,7 +839,7 @@ text-decoration: none!important;
 .main_logo {
   width: 100%;
 }
-@media (max-width: 890px) {
+@media only screen (max-width: 890px) {
   .small_img {
     display: none;
   }
