--- a/site_second _some/css/style.css
+++ b/site_second _some/css/style.css
@@ -381,7 +381,7 @@ div#languageSwitch a:hover {
 }
 .cross{
   background:none;
-  position:absolute;
+  position:fixed;
   top:0px;
   right:0;
   padding:0px 15px 0px 15px;
